--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -134,16 +134,20 @@ test_config:
     status: EXPECTED_PASSING
 
   falcon/pytorch-tiiuae/Falcon3-7B-Base-single_device-inference:
-    supported_archs: ["p150"]
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
 
   falcon/pytorch-tiiuae/Falcon3-10B-Base-single_device-inference:
-    supported_archs: ["p150"]
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
 
   falcon/pytorch-tiiuae/Falcon3-Mamba-7B-Base-single_device-inference:
-    supported_archs: ["p150"]
-    status: EXPECTED_PASSING
+    markers: [try_bfp8]
+    # TODO - Open issue, for some reason BFP8 causes this model to hang on n150 + p150 on CI and locally
+    # https://github.com/tenstorrent/tt-xla/actions/runs/21018366572/job/60428401625
+    status: NOT_SUPPORTED_SKIP
+    bringup_status: FAILED_RUNTIME
+    reason: "Hangs forever on CI and locally"
     assert_pcc: false # issue - https://github.com/tenstorrent/tt-xla/issues/2607
 
 #  yolov5/pytorch-yolov5s-single_device-inference:
@@ -1501,31 +1505,21 @@ test_config:
     reason: "RuntimeError: The tensor has a non-zero number of elements, but its data is not allocated yet."
 
   flux/pytorch-schnell-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9095736145973206. Required: pcc=0.99"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip" # (flux.1-schnell is 12B param model)
-        bringup_status: FAILED_RUNTIME
+    supported_archs: ["p150"] # 12B param model
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9095736145973206. Required: pcc=0.99"
 
   flux/pytorch-dev-single_device-inference:
-    arch_overrides:
-      p150:
-        status: EXPECTED_PASSING
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip" # (flux.1-dev is 12B param model)
-        bringup_status: FAILED_RUNTIME
+    supported_archs: ["p150"] # 12B param model
+    status: EXPECTED_PASSING
 
   gliner/pytorch-urchade/gliner_multi-v2.1-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
     reason: "TypeError: GLiNER.compile() got an unexpected keyword argument 'backend'"
 
   gemma/pytorch-google/gemma-1.1-7b-it-single_device-inference:
-    supported_archs: ["p150"]
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
 
@@ -1537,33 +1531,21 @@ test_config:
     reason: "RuntimeError: Out of Memory: Not enough space to allocate 2902982656 B DRAM buffer across 12 banks"
 
   mistral/pixtral/pytorch-single_device-inference:
+    supported_archs: ["p150"] # 12B param model
     assert_pcc: false
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip" # (mistral-community/pixtral-12b is 12B param model)
-        bringup_status: FAILED_RUNTIME
 
   phi4/causal_lm/pytorch-microsoft/phi-4-single_device-inference:
     supported_archs: ["p150"] # Run as tensor_parallel for wormhole (14B param model).
     status: EXPECTED_PASSING
 
   phi4/seq_cls/pytorch-microsoft/phi-4-single_device-inference:
+    supported_archs: ["p150"] # 14B param model
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip" # (microsoft/phi-4 is 14B param model)
-        bringup_status: FAILED_RUNTIME
 
   phi4/token_cls/pytorch-microsoft/phi-4-single_device-inference:
+    supported_archs: ["p150"] # 14B param model
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip" # (microsoft/phi-4 is 14B param model)
-        bringup_status: FAILED_RUNTIME
 
   phi3/phi_3_5_vision/pytorch-instruct-single_device-inference:
     arch_overrides:
@@ -1614,12 +1596,8 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   qwen_3/embedding/pytorch-embedding_8b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   gpt_neo/sequence_classification/pytorch-gpt_neo_125M-single_device-inference:
     status: EXPECTED_PASSING
@@ -1639,23 +1617,19 @@ test_config:
     reason: "RuntimeError('Check failed: handle->HasValue(): Trying to access XLA data for tensor with ID 5271 while an async operation is in flight: UNKNOWN_SCALAR[]')"
 
   huggyllama/pytorch-llama_7b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
     arch_overrides:
       n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+        markers: [try_bfp8, large]
 
   llama/causal_lm/pytorch-huggyllama_7b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
+    assert_pcc: false # Calculated: pcc=0.9130426049232483. Change to torch==2.9.0
     arch_overrides:
       n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
-      p150:
-        status: EXPECTED_PASSING
-        assert_pcc: false # Calculated: pcc=0.9130426049232483. Change to torch==2.9.0
+        markers: [try_bfp8, large]
 
   llama/causal_lm/pytorch-llama_3_1_70b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1664,21 +1638,13 @@ test_config:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   llama/causal_lm/pytorch-llama_3_1_8b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/causal_lm/pytorch-llama_3_1_8b_instruct-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
     assert_pcc: false # ComputeConfig math_fidelity/fp32_dest_acc_en - https://github.com/tenstorrent/tt-xla/issues/2861
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/causal_lm/pytorch-llama_3_1_405b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1687,31 +1653,20 @@ test_config:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   llama/causal_lm/pytorch-llama_3_8b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/causal_lm/pytorch-llama_3_8b_instruct-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/sequence_classification/pytorch-huggyllama_7b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
+    assert_pcc: false # Calculated: pcc=0.9396957755088806. Change to torch==2.9.0
     arch_overrides:
       n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
-      p150:
-        status: EXPECTED_PASSING
-        assert_pcc: false # Calculated: pcc=0.9396957755088806. Change to torch==2.9.0
+        markers: [try_bfp8, large]
 
   llama/sequence_classification/pytorch-llama_3_1_70b-single_device-inference:
     status: NOT_SUPPORTED_SKIP
@@ -1724,20 +1679,12 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   llama/sequence_classification/pytorch-llama_3_1_8b-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/sequence_classification/pytorch-llama_3_1_8b_instruct-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   llama/sequence_classification/pytorch-llama_3_3_70b_instruct-single_device-inference:
     status: NOT_SUPPORTED_SKIP
@@ -1745,148 +1692,85 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   llama/sequence_classification/pytorch-llama_3_8b-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=-1.0000001192092896. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1472"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=-1.0000001192092896. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1472"
 
   llama/sequence_classification/pytorch-llama_3_8b_instruct-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   mistral/pytorch-7b-single_device-inference:
-    arch_overrides:
-      p150:
-        status: EXPECTED_PASSING
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    status: EXPECTED_PASSING
 
   mistral/pytorch-7b_instruct_v03-single_device-inference:
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
 
   mistral/pytorch-ministral_8b_instruct-single_device-inference:
-    arch_overrides:
-      p150:
-        status: EXPECTED_PASSING
-
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/pytorch-14b-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    supported_archs: ["p150"] # 14B param model
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5/causal_lm/pytorch-14b_instruct-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/pytorch-14b_instruct_1m-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.7706121206283569. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    supported_archs: ["p150"] # 14B param model
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.7706121206283569. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5/causal_lm/pytorch-32b_instruct-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   qwen_2_5/causal_lm/pytorch-7b-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5/causal_lm/pytorch-7b_instruct-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.7253174185752869. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.7253174185752869. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
+
 
   qwen_2_5/causal_lm/pytorch-7b_instruct_1m-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.8598132729530334. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.8598132729530334. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5/causal_lm/pytorch-math_7b-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5_coder/pytorch-32b_instruct-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   qwen_2_5_coder/pytorch-7b-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=nan. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_2_5_coder/pytorch-7b_instruct-single_device-inference:
-    arch_overrides:
-      p150:
-        assert_pcc: false
-        status: EXPECTED_PASSING
-        reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.964358925819397. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
+    assert_pcc: false
+    status: EXPECTED_PASSING
+    reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.964358925819397. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1474"
 
   qwen_3/causal_lm/pytorch-14b-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
@@ -1901,11 +1785,7 @@ test_config:
 
   qwen_3/causal_lm/pytorch-8b-single_device-inference:
     status: EXPECTED_PASSING
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Too large for single chip"
-        bringup_status: FAILED_RUNTIME
+    markers: [try_bfp8]
 
   qwen_2/causal_lm/pytorch-qwq_32b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1924,20 +1804,17 @@ test_config:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   gemma/pytorch-google/gemma-2-9b-it-single_device-inference:
-    supported_archs: ["p150"]
+    markers: [try_bfp8]
     status: EXPECTED_PASSING
 
   gemma/pytorch-google/gemma-2-27b-it-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
 
   falcon/pytorch-tiiuae/falcon-7b-instruct-single_device-inference:
-    supported_archs: ["p150"]
+    markers: [try_bfp8]
     assert_pcc: false
     status: EXPECTED_PASSING
     reason: "AssertionError: PCC comparison failed. Calculated: pcc=0.9418849945068359. Required: pcc=0.99 - https://github.com/tenstorrent/tt-xla/issues/1475"
-    arch_overrides:
-      n150:
-        status: EXCLUDE_MODEL # This model is run as tensor_parallel already.
 
   d_fine/pytorch-nano-single_device-inference:
     status: NOT_SUPPORTED_SKIP
