Apply large marker to 3x huggylama 7B tests for n150 since Signal 9 OOM Killed on CI. p150 has enough host RAM
 - Add large n150 job for CI on CiV2 for huggylama tests

--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -1615,11 +1615,17 @@ test_config:
   huggyllama/pytorch-llama_7b-single_device-inference:
     markers: [try_bfp8]
     status: EXPECTED_PASSING
+    arch_overrides:
+      n150:
+        markers: [try_bfp8, large]
 
   llama/causal_lm/pytorch-huggyllama_7b-single_device-inference:
     markers: [try_bfp8]
     status: EXPECTED_PASSING
     assert_pcc: false # Calculated: pcc=0.9130426049232483. Change to torch==2.9.0
+    arch_overrides:
+      n150:
+        markers: [try_bfp8, large]
 
   llama/causal_lm/pytorch-llama_3_1_70b-single_device-inference:
     status: EXCLUDE_MODEL # Too large for single chip, run as tensor_parallel instead.
@@ -1653,6 +1659,9 @@ test_config:
     markers: [try_bfp8]
     status: EXPECTED_PASSING
     assert_pcc: false # Calculated: pcc=0.9396957755088806. Change to torch==2.9.0
+    arch_overrides:
+      n150:
+        markers: [try_bfp8, large]
 
   llama/sequence_classification/pytorch-llama_3_1_70b-single_device-inference:
     status: NOT_SUPPORTED_SKIP
