use shared runner in perf triggering

--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -45,3 +45,4 @@ jobs:
         ref: vvukoman/extract-mlir-version-differently
         docker-image: ${{ needs.build-release-docker.outputs.docker_image }}
         project: tt-xla
+        sh-runner: true
