--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -39,7 +39,7 @@ jobs:
 
   perf-benchmark:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/extract-mlir-version-differently
-    needs: [ build-ttxla, build-release-docker ]
+    needs: [ build-release-docker ]
     secrets: inherit
     with:
         ref: vvukoman/extract-mlir-version-differently
@@ -49,18 +49,18 @@ jobs:
 
   demo-test:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/extract-mlir-version-differently
-    needs: [ build-ttxla, build-release-docker ]
+    needs: [ build-release-docker ]
     secrets: inherit
     with:
         docker-image: ${{ needs.build-release-docker.outputs.docker_image }}
         project-filter: tt-xla
 
-  # publish-release:
-  #   uses: ./.github/workflows/call-publish-release.yml
-  #   if: false
-  #   secrets: inherit
-  #   needs: [ publish-release-wheel, build-release-docker, release-tests ]
-  #   with:
-  #     release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
-  #     docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
-  #     is_nightly_release: true
+  publish-release:
+    uses: ./.github/workflows/call-publish-release.yml
+    if: false
+    secrets: inherit
+    needs: [ build-release-docker, perf-benchmark, demo-test ]
+    with:
+      release_tag: ${{ inputs.release_tag }}
+      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
+      is_nightly_release: true
